--- a/notebook/exercices.ipynb
+++ b/notebook/exercices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,13 +29,12 @@
     "    \n",
     "    def median(self,liste):\n",
     "        l_valeurs=sorted([x for x in liste if x != None])\n",
-    "        print(l_valeurs)\n",
     "        effectifs=len(l_valeurs)\n",
     "        if effectifs % 2 == 0:\n",
     "            mediane=(l_valeurs[effectifs//2 - 1] + l_valeurs[effectifs//2]) / 2\n",
     "        else :\n",
     "            mediane=l_valeurs[effectifs//2]\n",
-    "        \n",
+    "        # construction de la liste transformée\n",
     "        for elt in liste :\n",
     "            if elt == None : \n",
     "                self.liste_cor.append(mediane)\n",
@@ -52,14 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 4, 6]\n",
       "liste corrigée : [4, 2, 4, 6, 4]\n"
      ]
     }
@@ -131,43 +129,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def quiz(chances, question, reponse):\n",
     "    if chances > 0 :\n",
-    "        q=input(question)\n",
-    "        print(str(q))\n",
-    "        print(str(reponse))\n",
-    "        while q <> reponse :\n",
+    "        r_user=input(question)\n",
+    "        r_user=str(r_user).lower()\n",
+    "        reponse=str(reponse).lower()\n",
+    "        while r_user != reponse :\n",
     "            chances -= 1\n",
     "            print(f\"dommage, il te reste {chances} essais\")\n",
     "            if chances == 0 : \n",
     "                print(\"perdu\")\n",
     "                break\n",
-    "            q=input(question)\n",
+    "            r_user=input(question)\n",
+    "            r_user=str(r_user).lower()\n",
     "    if chances > 0 :\n",
     "        print(\"bravo\")\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "2\n",
-      "dommage, il te reste 2 essais\n"
+      "elon musk\n",
+      "dommage, il te reste 2 essais\n",
+      "bravo\n"
      ]
     }
    ],
    "source": [
-    "quiz(3,\"Combien de fois la France a gagné la coupe du monde ?\",2)"
+    "quiz(chances=3, question=\"Qui a fondé SpaceX ?\", reponse=\"Elon Musk\")"
    ]
   }
  ],
